--- a/_posts/2023-05-24-INITIUM-国泰歧视风波-两天内-一宗小红书投诉如何升级至香港特首的痛愤.html
+++ b/_posts/2023-05-24-INITIUM-国泰歧视风波-两天内-一宗小红书投诉如何升级至香港特首的痛愤.html
@@ -37,7 +37,7 @@ author: 端传媒记者郑淑华、郝鑫镭 实习记者马碧玉 发自 新加
 <p>翌日，特首李家超在广州出席粤港合作周启动礼致辞时主动提及事件，称对空服员的言行感到痛心。他说“这些不敬的言行伤害了香港和内地同胞的感情”、破坏香港尊重、有礼共融的文化和价值观，并形容言行“恶劣”，对此“感到痛愤和失望。”</p>
 <p>李家超又指已向林绍波提出，“事件破坏香港形象、伤害香港内地同胞的感情，是严重事件”。他不容许类似事件再次发生，并要求国泰检讨培训服务素质和提升顾客服务文化。</p>
 <p>出席同一场合的林绍波，就事件亲身以普通话致歉，重申对有关行为秉持零容忍的态度，并会亲自领导跨部门的工作小组作全面检讨。</p>
-<h1>大陆意见领袖攻击、香港网民批处分助长批斗</h1>
+<h2>大陆意见领袖攻击、香港网民批处分助长批斗</h2>
 <p>官媒引导外，中国大陆的民粹意见领袖们也纷纷出动。例如，@上帝之鹰 24日接连发布国泰的相关微博，持续关注国泰有没有在Facebook、Twitter和Instagram同步发表声明，又撷取Facebook、香港连登讨论区、Instagram中的部分言论，甚至截图发布一网友私人Instagram帐号名、照片，称“疑似国泰空姐挑衅内地网友”；该帐号目前已转为私密帐号。</p>
 <p>另一位民粹意见领袖@后沙月光本尊 也不断跟进事件，以“黄尸”、“蟑螂屋”等侮辱性词汇描述空中服务员工会和国泰。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/860f30e5720944cf83b399670e8ee8b6.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年4月1日，国泰航空机组人员穿过香港国际机场的入境大堂。摄：Li Zhihua/China News Service via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -46,7 +46,7 @@ author: 端传媒记者郑淑华、郝鑫镭 实习记者马碧玉 发自 新加
 <p>5月24日晚，国泰航空公司空中服务员工会发声明，对是次事件导致三名空中服务员被解雇表示深切遗憾。声明指，空服员一向尊重以及平等对待来自不同国家和文化背景的乘客，“并遵从公司指引，以英语为官方语言及经公司考核合格的语言与乘客沟通。”</p>
 <p>声明提到，疫情过后旅客人数上升，但国泰未有根据实际需要恢复原有人手，前线人员面对人手及资源不足、工作量大幅上升以及薪酬过低等，“士气无比低落”，亦因而衍生有关机舱服务的投诉。</p>
 <p>对于网上有人呼吁乘客作出挑衅空服员和摄录的行为，工会表示“同事们承受巨大心理压力，感到极度惶恐”，要求国泰给予明确指引，保障空中服务员在不受无理干扰下，顺利完成航班所有服务。</p>
-<p>早前，工会向会员发内部电邮，指理解空服员感到“心灰意冷”，并对他们面对众多失实指控和网上传闻感到痛心。公会表示，期望公司支持和为员工保护自己提供指引，却收到这不幸的消息。</p>
+<p>早前，工会向会员发内部电邮，指理解空服员感到“心灰意冷”，并对他们面对众多失实指控和网上传闻感到痛心。工会表示，期望公司支持和为员工保护自己提供指引，却收到这不幸的消息。</p>
 <p>工会又提醒会员清楚自己的权利，例如根据“机舱服务指引”（Inflight Service Delivery Manual），若机舱服务员未经同意下被乘客拍摄，他们应请乘客删除拍摄内容；如不跟从，他们可通知机长及机舱服务经理。同时，公司政策表明对不遵从规矩的乘客采取“零容忍”态度，会采取一切措施尽量减少有关不守规矩乘客引发的事件，并确保员工在处理相关事件时得到全面支持。</p>
 <p>虽然在微博频频道歉，国泰暂时未在官方网站发表道歉声明，其Facebook<a href="https://www.facebook.com/cathaypacificHK">专页</a>由5月22日至今亦未有更新帖文。有网民在早前的帖文留言，批评国泰处分三位空服员，“是正在助长批斗文化”，又指“在机舱把别人私聊录音行为本来已经是不对，但国泰为了利益至上而放弃坚守维护员工的私隐”；有人认为是客人口误，“又唔系当面笑你，私底下同同事笑下都唔得”；亦有留言称行李损毁，投诉6个月后尚未有消息，讽刺要“去小红书，揾人跟进下先”。</p>
 <p>不过亦有留言指国泰是服务行业，“语言不是可以用来歧视的武器，而是用来交流的工具。”若国泰不改善，“就别怪大家用脚投票了。”</p>
