--- a/_posts/2023-05-24-INITIUM-是-家-还是-枷-台湾儿少为什么离家-一定要回家吗.html
+++ b/_posts/2023-05-24-INITIUM-是-家-还是-枷-台湾儿少为什么离家-一定要回家吗.html
@@ -9,7 +9,14 @@ author: 王怡蓁
 ---
 
 <p>「“今天回去，明天又走，这样算回家吗？”」</p><p>端传媒记者 王怡蓁 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-taiwan-away-from-home-among-adolescents/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/f8bf8ea5802c40359cc2b995fd742558.jpg?imageView2/1/w/1080/h/717/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit">插画：Rosa Lee</span></figcaption></figure><p>几岁的孩子会决定离家出走？这个问题对阿国来说，答案是九岁。</p>
-<p>29岁的阿国，独身住在新北市的一处小套房，小学三年级的他开始离家，直到14岁，反复离家的他终于“如愿”进入少年观护所，并请求法官让他进入少年辅育院接受感化教育。这次，他总算可以不用回家，尽管只是暂时的。</p>
-<p>回家，在阿国眼中宛如是回到火坑一般。那个名为“火坑”的家，自他有记忆以来，母亲便不曾给他好脸色看，即便母亲有三个孩子，但她对待阿国的方式，却与哥哥与妹妹截然不同。</p>
-<p>阿国经常没来由的被吊起来欧打，被迫吃下臭酸、长虫的食物，夜晚不给睡觉、看不到尽头地被罚抄写课文。他的手足，则在他受尽一切体罚的时候，可以坐上餐桌吃著热腾腾的菜肴，晚间可以安稳地上床入睡。当年的他还小、很小，不知道该怎么理解发生在自己身上的事，直到长大，他才知道，那是家暴。</p>
+            <figcaption itemprop="caption"><span class="credit">插画：Rosa Lee</span></figcaption></figure><p>几岁的孩子会决定离家出走？这个问题对阿国来说，答案是九岁。<br><br>29岁的阿国，独身住在新北市的一处小套房，小学三年级的他开始离家，直到14岁，反复离家的他终于“如愿”进入少年观护所，并请求法官让他进入少年辅育院接受感化教育。这次，他总算可以不用回家，尽管只是暂时的。<br><br>回家，在阿国眼中宛如是回到火坑一般。那个名为“火坑”的家，自他有记忆以来，母亲便不曾给他好脸色看，即便母亲有三个孩子，但她对待阿国的方式，却与哥哥与妹妹截然不同。<br><br>阿国经常没来由的被吊起来欧打，被迫吃下臭酸、长虫的食物，夜晚不给睡觉、看不到尽头地被罚抄写课文。他的手足，则在他受尽一切体罚的时候，可以坐上餐桌吃著热腾腾的菜肴，晚间可以安稳地上床入睡。当年的他还小、很小，不知道该怎么理解发生在自己身上的事，直到长大，他才知道，那是家暴。<br><br>阿国几乎是一个人长大的。哥哥对阿国来说，只是另一个欺压他的家人。<br><br>“他看我妈怎样对我，他就那样对付我，”阿国说，哥哥曾用胶带将他全身捆绑起来，只留口、鼻与眼睛，将他一整天绑在床上，母亲见到，但又离开了，无动于衷的她相信哥哥的说法：因为阿国太吵了。<br><br>小学三年级，那年阿国九岁，“为了生存”的他，开始紧紧抓住每一次可以离开家的机会：去学校后就藏匿在校园，出门倒垃圾就跑进超商躲起来。上学是阿国最感轻松的时候，至少还有一顿像样的午餐可以吃。但到了寒暑假，不到十岁的阿国，又开始过上有一餐没一餐的日子。<br><br>阿国一次次离家，一次次被寻回，再一次次被毒打，最后又一次次离家。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-taiwan-away-from-home-among-adolescents/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/e9f330d089314b208a59b28352e9f70f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="阿国。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">阿国。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption></figure>
+
+<h2>当“家”不再是避风港</h2>
+<blockquote>
+<p>阿国终究没被其他人接住。他告诉过身边每一个大人自己的遭遇，大人们告诉他“没那么严重”，就连亲近的阿公阿嬷也不相信他，“当妈妈的不可能那样对孩子”。</p>
+</blockquote>
+<p>阿国不是没向其他人求救过。<br><br>阿国的父亲知道妻子似乎不怎喜欢这个孩子，但也仅止于此，只在母亲不给阿国饭吃的时候，会偷偷带著他外出用餐。</p>
+<p>但阿国终究没被其他人接住。他告诉过身边每一个大人自己的遭遇，大人们告诉他“没那么严重”，就连亲近的阿公阿嬷也不相信他：“当妈妈的不可能那样对孩子。”即便发生在阿国身上的事似乎已有迹可循了，阿嬷仍以亲情绑架，安慰他“再怎么坏也是自己妈妈”。于是，阿国开始不回家，被家人通报失踪后再被警局少年队寻获，他笑称自己是“常客”。</p>
+<p>每每当母亲接获少年队通知寻获阿国，她总会在员警面前哭到声泪俱下，难过孩子的不告而别、庆幸阿国平安归来。但回到家中，母亲会收起在警局哭得泪眼婆娑的哀伤神情，脸色大变地质问阿国：“你觉得警察会相信你说的，还是相信我呢？”（编按：台湾《家暴法》早在1998年实施，然而社会仍多有“法不入家门”的看法，父母严厉管教子女是正常不过的事。）</p>
