--- a/_posts/2023-05-24-INITIUM-国泰歧视风波-两天内-一宗小红书投诉如何升级至香港特首的痛愤.html
+++ b/_posts/2023-05-24-INITIUM-国泰歧视风波-两天内-一宗小红书投诉如何升级至香港特首的痛愤.html
@@ -9,66 +9,61 @@ author: 端传媒记者郑淑华、郝鑫镭 实习记者马碧玉 发自 新加
 ---
 
 <p>「一边历数在港遭遇的冷眼和不耐烦，另一边则情绪压抑，充满愤怒和不安。国泰事件同时点燃了两种情绪。」</p><p>端传媒记者郑淑华、郝鑫镭 实习记者马碧玉 发自 新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/e107b6c24be64e79afe9217aa38c4882.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年11月29日，国泰航空的飞机停泊在香港国际机场停机坪，乘客等待登上航班。摄：Katherine Cheng/SOPA Images/LightRocket via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2021年11月29日，国泰航空的飞机停泊在香港国际机场停机坪，乘客等待登上航班。摄：Katherine Cheng/SOPA Images/LightRocket via Getty Images<span class="credit"></span></figcaption></figure><p>“If you cannot say blanket in English, you cannot have it.”</p>
-<p>“Hhhhh…… True.”</p>
-<p>“Carpet is on the floor….Feel free if you want.”</p>
-<p>在中国大陆社交平台小红书上，一位匿名人士于5月22日以新开帐户的方式上载了一段<a href="https://www.xiaohongshu.com/user/profile/6274c7cc000000002102aee6">录音</a>。录音中，国泰航空空中服务员在机舱中调侃乘客未能用英文准确描述自己的需求，把blanket（毛毯）说成carpet（地毯）。该举报者认为，空服人员此举是“赤裸裸的歧视”，缺乏“对旅客基本的尊重”。</p>
-<p>疫情期间曾被短暂压抑、开关后社交媒体上时有发生的陆港矛盾，在两日内因国泰事件被迅速激化——如同过去一样，再次由民生矛盾发酵至政治冲突。一边历数在港旅行、生活时因普通话遭遇的冷眼和不耐烦，又联系2019年反修例运动期间部分国泰员工支持运动的声音、付国豪在机场“被打”事件，将国泰事件导向“企业文化”、政治立场的抨击；另一边则在国安法和持续至今的大监控里面对举报和录音、情绪压抑，又因事件上升至政治立场和官媒舆论引导，充满愤怒和不安。国泰事件似乎同时点燃了两种情绪。</p>
-<p>在22日、23日短短两日内，国泰航空三度在<a href="https://weibo.com/u/1684936355">微博</a>以简体中文发表道歉声明，并迅速解雇涉事的三名空服员。从小红书的投诉开始，事态不断升级，先是运输及物流局局长林世雄声明对事件感“痛心”，香港特首李家超更召开发布会称“对国泰事件感到失望”。然而道歉、解雇之外，暂时并未见具体的调查细节和清晰的事件全貌。国泰空中服务员工会于24日晚发声明表示深切遗憾，并指“​​冰封三尺非一日之寒”，促请公司正视员工士气低落的问题，重建合理工作环境。</p>
+            <figcaption itemprop="caption">2021年11月29日，国泰航空的飞机停泊在香港国际机场停机坪，乘客等待登上航班。摄：Katherine Cheng/SOPA Images/LightRocket via Getty Images<span class="credit"></span></figcaption></figure><p>“If you cannot say blanket in English, you cannot have it.”<br><br>“Hhhhh…… True.”<br><br>“Carpet is on the floor….Feel free if you want.”<br><br>在中国大陆社交平台小红书上，一位匿名人士于5月22日以新开帐户的方式上载了一段<a href="https://www.xiaohongshu.com/user/profile/6274c7cc000000002102aee6">录音</a>。录音中，国泰航空空中服务员在机舱中调侃乘客未能用英文准确描述自己的需求，把blanket（毛毯）说成carpet（地毯）。该举报者认为，空服人员此举是“赤裸裸的歧视”，缺乏“对旅客基本的尊重”。<br><br>疫情期间曾被短暂压抑、开关后社交媒体上时有发生的中港矛盾，在两日内因国泰事件被迅速激化——如同过去一样，再次由民生矛盾发酵至政治冲突。一边历数在港旅行、生活时因普通话遭遇的冷眼和不耐烦，又联系2019年反修例运动期间部分国泰员工支持运动的声音、付国豪在机场“被打”事件，将国泰事件导向“企业文化”、政治立场的抨击；另一边则在国安法和持续至今的大监控里面对举报和录音、情绪压抑，又因事件上升至政治立场和官媒舆论引导，充满愤怒和不安。国泰事件似乎同时点燃了两种情绪。<br><br>在22日、23日短短两日内，国泰航空三度在<a href="https://weibo.com/u/1684936355">微博</a>以简体中文发表道歉声明，并迅速解雇涉事的三名空服员。从小红书的投诉开始，事态不断升级，先是运输及物流局局长林世雄声明对事件感“痛心”，香港特首李家超更召开发布会称“对国泰事件感到失望”。然而道歉、解雇之外，暂时并未见具体的调查细节和清晰的事件全貌。国泰空中服务员工会于24日晚发声明表示深切遗憾，并指“​​冰封三尺非一日之寒”，促请公司正视员工士气低落的问题，重建合理工作环境。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/d50e9623235144b983267222a2261b9c.jpg?imageView2/1/w/1080/h/2337/format/jpg" alt="内地网民在小红书指控国泰空姐歧视不会说英语的中国乘客，并以录音向国泰作出实名举报。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">内地网民在小红书指控国泰空姐歧视不会说英语的中国乘客，并以录音向国泰作出实名举报。</figcaption></figure>
+<figcaption itemprop="caption">内地网民在小红书指控国泰空姐歧视不会说英语的中国乘客，并以录音向国泰作出实名举报。<span class="credit"></span></figcaption></figure>
 
 <h2>从“小红书”的投诉上升至特首批评</h2>
 <p>截至24日晚上，小红书最初的爆料帖文被点赞2.3万次，但官媒《人民日报》海外版帐号“侠客岛”的评论收获更多关注。其评论《在香港歧视普通话，注定是个笑话》直接将事件关联陆港政治冲突、要求国泰“重拳整顿”，得到14余万赞、2千多次转发。但另一边的香港，反应相对冷淡，Now新闻在Facebook有关3位空服员被解雇的即时新闻，只有约2百个反应，当中近1百个是怒；而李家超“伤害同胞感情”的言论，有3百人反应，其中225人按下哈哈笑脸。</p>
 <p>录音曝光后的当晚，国泰就在微博发表声明，对有关旅客的不愉快经历深表歉意，又表示对事件高度关注，已联络有关旅客，将严肃调查处理。</p>
 <p>5月23日，投诉者在小红书<a href="https://www.xiaohongshu.com/explore/646c430e00000000130004ec">更新事态</a>。她表示，发帖初衷是想给国泰压力、彻查此事并公布调查结果，加强员工培训。投诉者透露，国泰航空的小红书帐号曾发出私信，想要进一步了解情况，投诉者向其索取总部的投诉邮箱。当天早上，国泰总部致电投诉者，称已经成立调查小组，当日早上高层亦召开了会议。</p>
-<p>投诉者还强调，“很多人会觉得我多管闲事，激化矛盾，且这样的投诉不会有任何作用。但我觉得做人应为正义发声，哪怕我的行为能够对歧视者产生一点点震摄，让Ta们觉得歧视是有后果的，那就够了。且对事不对人，哪里都有好人与坏人。”</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/2a0d93dbc7174da4b1c8e076c531c078.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月13日，乘客在香港香港国际机场登上国泰航空的航班。摄：Marc Fernandes/NurPhoto via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2023年2月13日，乘客在香港香港国际机场登上国泰航空的航班。摄：Marc Fernandes/NurPhoto via Getty Images</figcaption></figure>
+ 
+ 
 
-<p>在短短24小时内，国泰在微博三度道歉。小红书帖文发出的当天晚上，国泰第一次在微博书面道歉。翌日下午，国泰以航空服务董事吴洁文作署名，再次发表道歉声明，宣布已暂停有关空中服务员工作，即时展开内部调查，并会于三日内公布处理结果。“我们郑重承诺，对于任何有违规章制度，有悖职业操守的不当言行，一经确认，均会严肃处理。”</p>
-<p>晚上，国泰航空行政总裁林绍波第三度发表声明，再就事件向受影响乘客和社会各界表示“诚挚的歉意。”声明指，国泰已完成调查，并根据公司的规章制度，解雇三位涉事空服员，“对于个别员工严重违反公司规章制度及道德准则的行为，秉持零容忍的态度，绝不姑息。”</p>
-<p>声明又提到，林绍波将亲自领导跨部门的工作小组作出全面检讨，重新审视服务流程、人员培训和相关制度，确保所有员工“尊重来自不同背景及文化的旅客，在所有的服务地区均提供专业且一致的服务。”</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/5e60a5f593ac4c348f27ecdfd62a0ba8.png?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"></figcaption></figure>
+ 
+ 
+ 
+ 
 
-<p>事件在大陆发酵之际，香港高官亦高调批评事件，要求国泰管理层检讨和改进。</p>
-<p>3名空服员被解雇、国泰第三度在微博道歉后，运输及物流局局长林世雄在5月23日深夜发声明，表示对国泰部分机组人员的不当言论感到“十分痛心”，指“事件严重违背香港优良的待客之道、一贯的价值观和道德标准。”他又已向国泰表达高度关注，要求管理层立刻改善服务。</p>
-<p>翌日，特首李家超在广州出席粤港合作周启动礼致辞时主动提及事件，称对空服员的言行感到痛心。他说“这些不敬的言行伤害了香港和内地同胞的感情”、破坏香港尊重、有礼共融的文化和价值观，并形容言行“恶劣”，对此“感到痛愤和失望。”</p>
-<p>李家超又指已向林绍波提出，“事件破坏香港形象、伤害香港内地同胞的感情，是严重事件”。他不容许类似事件再次发生，并要求国泰检讨培训服务素质和提升顾客服务文化。</p>
-<p>出席同一场合的林绍波，就事件亲身以普通话致歉，重申对有关行为秉持零容忍的态度，并会亲自领导跨部门的工作小组作全面检讨。</p>
-<h2>大陆意见领袖攻击、香港网民批处分助长批斗</h2>
-<p>官媒引导外，中国大陆的民粹意见领袖们也纷纷出动。例如，@上帝之鹰 24日接连发布国泰的相关微博，持续关注国泰有没有在Facebook、Twitter和Instagram同步发表声明，又撷取Facebook、香港连登讨论区、Instagram中的部分言论，甚至截图发布一网友私人Instagram帐号名、照片，称“疑似国泰空姐挑衅内地网友”；该帐号目前已转为私密帐号。</p>
-<p>另一位民粹意见领袖@后沙月光本尊 也不断跟进事件，以“黄尸”、“蟑螂屋”等侮辱性词汇描述空中服务员工会和国泰。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/860f30e5720944cf83b399670e8ee8b6.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年4月1日，国泰航空机组人员穿过香港国际机场的入境大堂。摄：Li Zhihua/China News Service via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年4月1日，国泰航空机组人员穿过香港国际机场的入境大堂。摄：Li Zhihua/China News Service via Getty Images</figcaption></figure>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
-<p>5月24日晚，国泰航空公司空中服务员工会发声明，对是次事件导致三名空中服务员被解雇表示深切遗憾。声明指，空服员一向尊重以及平等对待来自不同国家和文化背景的乘客，“并遵从公司指引，以英语为官方语言及经公司考核合格的语言与乘客沟通。”</p>
-<p>声明提到，疫情过后旅客人数上升，但国泰未有根据实际需要恢复原有人手，前线人员面对人手及资源不足、工作量大幅上升以及薪酬过低等，“士气无比低落”，亦因而衍生有关机舱服务的投诉。</p>
-<p>对于网上有人呼吁乘客作出挑衅空服员和摄录的行为，工会表示“同事们承受巨大心理压力，感到极度惶恐”，要求国泰给予明确指引，保障空中服务员在不受无理干扰下，顺利完成航班所有服务。</p>
-<p>早前，工会向会员发内部电邮，指理解空服员感到“心灰意冷”，并对他们面对众多失实指控和网上传闻感到痛心。工会表示，期望公司支持和为员工保护自己提供指引，却收到这不幸的消息。</p>
-<p>工会又提醒会员清楚自己的权利，例如根据“机舱服务指引”（Inflight Service Delivery Manual），若机舱服务员未经同意下被乘客拍摄，他们应请乘客删除拍摄内容；如不跟从，他们可通知机长及机舱服务经理。同时，公司政策表明对不遵从规矩的乘客采取“零容忍”态度，会采取一切措施尽量减少有关不守规矩乘客引发的事件，并确保员工在处理相关事件时得到全面支持。</p>
-<p>虽然在微博频频道歉，国泰暂时未在官方网站发表道歉声明，其Facebook<a href="https://www.facebook.com/cathaypacificHK">专页</a>由5月22日至今亦未有更新帖文。有网民在早前的帖文留言，批评国泰处分三位空服员，“是正在助长批斗文化”，又指“在机舱把别人私聊录音行为本来已经是不对，但国泰为了利益至上而放弃坚守维护员工的私隐”；有人认为是客人口误，“又唔系当面笑你，私底下同同事笑下都唔得”；亦有留言称行李损毁，投诉6个月后尚未有消息，讽刺要“去小红书，揾人跟进下先”。</p>
-<p>不过亦有留言指国泰是服务行业，“语言不是可以用来歧视的武器，而是用来交流的工具。”若国泰不改善，“就别怪大家用脚投票了。”</p>
-<p>在连登讨论区，有网民出帖指“九记牛腩”和“澳大利亚牛奶公司”出名服务态度欠佳，也会骂客人，反问为何未有被投诉。</p>
-<p>至于空服员言行有否触犯歧视条例，平等机会委员会主席朱敏健接受商业电台访问时指出，受《种族歧视条例》保护的特征不包括宗教和语言，因此是次个案不涉及直接种族歧视。可是，若服务提供者在没有凭据下，要求顾客使用某种语言、一个“魔法字眼”，才提供服务，这会令某族群因无法符合要求而蒙受不利，或构成“间接歧视”。</p>
-<p>而选委界议员、工联会陆颂雄在立法会前厅交流会上，促请政府尽快完成“族内歧视”立法工作。他认为，涉事空服员和投诉的大陆人都是中国人、华人，未必能用现时的种族歧视处理。律政司司长林定国回应指，平机会不断研究如何优化和反对任何形式的歧视，包括不同族群之间的歧视，这方面工作正不断推进。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2019/09/08e7a6cf3cea4195ae21c857988c3509.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年8月28日，中环爱丁堡广场举行的国泰员工集会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2019年8月28日，中环爱丁堡广场举行的国泰员工集会。</figcaption></figure>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
-<h2>多次卷入陆港矛盾的政治风波</h2>
-<p>国泰虽然长年居于全球最佳航空公司前列，又长年扎根香港，但其在香港人心里的印象并不佳。国泰在今次事件中得到来自本地支援声量不多，部分或基于这个原因。</p>
-<p>关于国泰，很多香港人可能首先联想到它的别名“因航”，这个名字源自有媒体经常以“因管理不善、服务质素不断下降而屡受抨击的国泰航空”、“因管理不善而在全球最佳航空公司排名榜节节下跌的国泰航空”等描述作为文章开首报导国泰，以示讽刺，其后网民把这些句子取其头尾，把国泰航空戏称为“因航”。</p>
-<p>这个别名不单纯是网民无缘由恶搞，国泰近20年确实问题不断。近年对公司影响最大的可算是2018年公布因巨额燃油对冲亏损，4年来共亏242亿港元，同年又有940万名乘客资料外泄事件，导致股价急挫；在资源不足之下，乘客体验被牺牲，座位变窄，航班延误等成为早年乘客对国泰服务的印象。而后，在2019年反修例运动和后来的疫情之间，大小事件让国泰更为疲于奔命。</p>
-<p>近年来，国泰屡次卷入政治风波。早在2018年，中国民航局发出新规定，要求航空公司不得将“台湾”和“中国”并列，须改成“中国台湾”或“中国台湾地区”，否则或被处罚。国泰及国泰港龙最终在限期前改名，大批网民不满其“跪低”，涌到国泰Facebook专页留言。</p>
-<p>2019年7月，香港正值反修例运动示威。国泰一名机长在航班上以英语进行广播，讲解在接机大堂进行中的反修例集会，形容是“和平、有序”，鼓励乘客了解，最后用广东话说“香港人加油，万事小心”。消息流传指该机师被解雇，其后国泰证实该机师已离职，但未回应他是主动离职抑或被解雇。</p>
-<p>8月，中国民航局发出重大航空安全风险警示，对国泰要求提出三点要求，包括曾参与反修例游行的机组人员，须暂停执行飞往内地航班和有关一切职务。国泰指，一名被控暴动罪的机组人员已被暂停飞行职务，另有两位机场员工因“行为不当”被解雇，包括时任国泰港龙空勤人员协会主席施安娜。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/260538a6396d48af9e4c3466c2624d8b.png?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"></figcaption></figure>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
-<p>一周后，英籍行政总裁何杲辞职，称是“对公司近月所面对的事件负责”。他在内部邮件曾提到，国泰饱受压力，尤其来自“再重要不过的中国大陆市场”；顾客及商务总裁卢家培亦在同日辞职。原本是国泰机师的前公民党议员谭文豪随后宣布辞职，他表示决定是为了保护公司免受政治压力。</p>
-<p>2020年疫情爆发，航空业重挫。6月，国泰航空启动390亿港元资本重组计划，香港政府注资合共273亿港元，惟4个月后，国泰宣布全球削减8500个岗位，并裁减5300名以香港作基地的员工，导致其子公司、有35年历史的“港龙航空”即时结业。</p>
-<p>当检疫措施放宽时，国泰却面对人手不足的困境，待遇亦难以吸引人才。香港航空机组人员协会 ﹙HKAOA﹚在2022年10月发稿，称国泰正面临“史无前例的人手及培训短缺”，机师由2020年10月大裁员之前的4千人，跌至约2500人，加上薪金被扣减，人员正持续流失。</p>
-<p>2023年初，国泰空中服务员工会不满资方编更安排、要求改善薪酬等等，原订在国泰城外发起集会，惟因国泰拒绝借出场地，无法取得警方不反对通知书。工会指为免会员参与未经批准集会，别无选择下取消行动。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/6ed1d07ce1a34efca72fdcd4d2350f48.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年5月19日，国泰航空的一架波音 747 从香港国际机场起飞。摄：Marc Fernandes/NurPhoto via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2021年5月19日，国泰航空的一架波音 747 从香港国际机场起飞。摄：Marc Fernandes/NurPhoto via Getty Images</figcaption></figure><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
+ 
+ 
+ 
+ 
+<p>投诉者还强调，“很多人会觉得我多管闲事，激化矛盾，且这样的投诉不会有任何作用。但我觉得做人应为正义发声，哪怕我的行为能够对歧视者产生一点点震摄，让Ta们觉得歧视是有后果的，那就够了。且对事不对人，哪里都有好人与坏人。”</p><p><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/2a0d93dbc7174da4b1c8e076c531c078.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月13日，乘客在香港香港国际机场登上国泰航空的航班。摄：Marc Fernandes/NurPhoto via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2023年2月13日，乘客在香港香港国际机场登上国泰航空的航班。摄：Marc Fernandes/NurPhoto via Getty Images<span class="credit"></span></figcaption><p></p><p>在短短24小时内，国泰在微博三度道歉。小红书帖文发出的当天晚上，国泰第一次在微博书面道歉。翌日下午，国泰以航空服务董事吴洁文作署名，再次发表道歉声明，宣布已暂停有关空中服务员工作，即时展开内部调查，并会于三日内公布处理结果。“我们郑重承诺，对于任何有违规章制度，有悖职业操守的不当言行，一经确认，均会严肃处理。”</p><p>晚上，国泰航空行政总裁林绍波第三度发表声明，再就事件向受影响乘客和社会各界表示“诚挚的歉意。”声明指，国泰已完成调查，并根据公司的规章制度，解雇三位涉事空服员，“对于个别员工严重违反公司规章制度及道德准则的行为，秉持零容忍的态度，绝不姑息。”</p><p>声明又提到，林绍波将亲自领导跨部门的工作小组作出全面检讨，重新审视服务流程、人员培训和相关制度，确保所有员工“尊重来自不同背景及文化的旅客，在所有的服务地区均提供专业且一致的服务。”</p><p><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/5e60a5f593ac4c348f27ecdfd62a0ba8.png?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p>事件在大陆发酵之际，香港高官亦高调批评事件，要求国泰管理层检讨和改进。</p><p>3名空服员被解雇、国泰第三度在微博道歉后，运输及物流局局长林世雄在5月23日深夜发声明，表示对国泰部分机组人员的不当言论感到“十分痛心”，指“事件严重违背香港优良的待客之道、一贯的价值观和道德标准。”他又已向国泰表达高度关注，要求管理层立刻改善服务。</p><p>翌日，特首李家超在广州出席粤港合作周启动礼致辞时主动提及事件，称对空服员的言行感到痛心。他说“这些不敬的言行伤害了香港和内地同胞的感情”、破坏香港尊重、有礼共融的文化和价值观，并形容言行“恶劣”，对此“感到痛愤和失望。”</p><p>李家超又指已向林绍波提出，“事件破坏香港形象、伤害香港内地同胞的感情，是严重事件”。他不容许类似事件再次发生，并要求国泰检讨培训服务素质和提升顾客服务文化。</p><p>出席同一场合的林绍波，就事件亲身以普通话致歉，重申对有关行为秉持零容忍的态度，并会亲自领导跨部门的工作小组作全面检讨。</p><p>大陆意见领袖攻击、香港网民批处分助长批斗</p><p>官媒引导外，中国大陆的民粹意见领袖们也纷纷出动。例如，@上帝之鹰 24日接连发布国泰的相关微博，持续关注国泰有没有在Facebook、Twitter和Instagram同步发表声明，又撷取Facebook、香港连登讨论区、Instagram中的部分言论，甚至截图发布一网友私人Instagram帐号名、照片，称“疑似国泰空姐挑衅内地网友”；该帐号目前已转为私密帐号。</p><p>另一位民粹意见领袖@后沙月光本尊 也不断跟进事件，以“黄尸”、“蟑螂屋”等侮辱性词汇描述空中服务员工会和国泰。</p><p><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/860f30e5720944cf83b399670e8ee8b6.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年4月1日，国泰航空机组人员穿过香港国际机场的入境大堂。摄：Li Zhihua/China News Service via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年4月1日，国泰航空机组人员穿过香港国际机场的入境大堂。摄：Li Zhihua/China News Service via Getty Images<span class="credit"></span></figcaption><p></p><p>5月24日晚，国泰航空公司空中服务员工会发声明，对是次事件导致三名空中服务员被解雇表示深切遗憾。声明指，空服员一向尊重以及平等对待来自不同国家和文化背景的乘客，“并遵从公司指引，以英语为官方语言及经公司考核合格的语言与乘客沟通。”</p><p>声明提到，疫情过后旅客人数上升，但国泰未有根据实际需要恢复原有人手，前线人员面对人手及资源不足、工作量大幅上升以及薪酬过低等，“士气无比低落”，亦因而衍生有关机舱服务的投诉。</p><p>对于网上有人呼吁乘客作出挑衅空服员和摄录的行为，工会表示“同事们承受巨大心理压力，感到极度惶恐”，要求国泰给予明确指引，保障空中服务员在不受无理干扰下，顺利完成航班所有服务。</p><p>早前，工会向会员发内部电邮，指理解空服员感到“心灰意冷”，并对他们面对众多失实指控和网上传闻感到痛心。工会表示，期望公司支持和为员工保护自己提供指引，却收到这不幸的消息。</p><p>工会又提醒会员清楚自己的权利，例如根据“机舱服务指引”（Inflight Service Delivery Manual），若机舱服务员未经同意下被乘客拍摄，他们应请乘客删除拍摄内容；如不跟从，他们可通知机长及机舱服务经理。同时，公司政策表明对不遵从规矩的乘客采取“零容忍”态度，会采取一切措施尽量减少有关不守规矩乘客引发的事件，并确保员工在处理相关事件时得到全面支持。</p><p>虽然在微博频频道歉，国泰暂时未在官方网站发表道歉声明，其Facebook<a href="https://www.facebook.com/cathaypacificHK">专页</a>由5月22日至今亦未有更新帖文。有网民在早前的帖文留言，批评国泰处分三位空服员，“是正在助长批斗文化”，又指“在机舱把别人私聊录音行为本来已经是不对，但国泰为了利益至上而放弃坚守维护员工的私隐”；有人认为是客人口误，“又唔系当面笑你，私底下同同事笑下都唔得”；亦有留言称行李损毁，投诉6个月后尚未有消息，讽刺要“去小红书，揾人跟进下先”。</p><p>不过亦有留言指国泰是服务行业，“语言不是可以用来歧视的武器，而是用来交流的工具。”若国泰不改善，“就别怪大家用脚投票了。”</p><p>在连登讨论区，有网民出帖指“九记牛腩”和“澳大利亚牛奶公司”出名服务态度欠佳，也会骂客人，反问为何未有被投诉。</p><p>至于空服员言行有否触犯歧视条例，平等机会委员会主席朱敏健接受商业电台访问时指出，受《种族歧视条例》保护的特征不包括宗教和语言，因此是次个案不涉及直接种族歧视。可是，若服务提供者在没有凭据下，要求顾客使用某种语言、一个“魔法字眼”，才提供服务，这会令某族群因无法符合要求而蒙受不利，或构成“间接歧视”。</p><p>而选委界议员、工联会陆颂雄在立法会前厅交流会上，促请政府尽快完成“族内歧视”立法工作。他认为，涉事空服员和投诉的大陆人都是中国人、华人，未必能用现时的种族歧视处理。律政司司长林定国回应指，平机会不断研究如何优化和反对任何形式的歧视，包括不同族群之间的歧视，这方面工作正不断推进。</p><p><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2019/09/08e7a6cf3cea4195ae21c857988c3509.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年8月28日，中环爱丁堡广场举行的国泰员工集会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2019年8月28日，中环爱丁堡广场举行的国泰员工集会。<span class="credit">摄：林振东/端传媒 </span></figcaption><p></p><p>多次卷入中港矛盾的政治风波</p><p>国泰虽然长年居于全球最佳航空公司前列，又长年扎根香港，但其在香港人心里的印象并不佳。国泰在今次事件中得到来自本地支援声量不多，部分或基于这个原因。</p><p>关于国泰，很多香港人可能首先联想到它的别名“因航”，这个名字源自有媒体经常以“因管理不善、服务质素不断下降而屡受抨击的国泰航空”、“因管理不善而在全球最佳航空公司排名榜节节下跌的国泰航空”等描述作为文章开首报导国泰，以示讽刺，其后网民把这些句子取其头尾，把国泰航空戏称为“因航”。</p><p>这个别名不单纯是网民无缘由恶搞，国泰近20年确实问题不断。近年对公司影响最大的可算是2018年公布因巨额燃油对冲亏损，4年来共亏242亿港元，同年又有940万名乘客资料外泄事件，导致股价急挫；在资源不足之下，乘客体验被牺牲，座位变窄，航班延误等成为早年乘客对国泰服务的印象。而后，在2019年反修例运动和后来的疫情之间，大小事件让国泰更为疲于奔命。</p><p>近年来，国泰屡次卷入政治风波。早在2018年，中国民航局发出新规定，要求航空公司不得将“台湾”和“中国”并列，须改成“中国台湾”或“中国台湾地区”，否则或被处罚。国泰及国泰港龙最终在限期前改名，大批网民不满其“跪低”，涌到国泰Facebook专页留言。</p><p>2019年7月，香港正值反修例运动示威。国泰一名机长在航班上以英语进行广播，讲解在接机大堂进行中的反修例集会，形容是“和平、有序”，鼓励乘客了解，最后用广东话说“香港人加油，万事小心”。消息流传指该机师被解雇，其后国泰证实该机师已离职，但未回应他是主动离职抑或被解雇。</p><p>8月，中国民航局发出重大航空安全风险警示，对国泰要求提出三点要求，包括曾参与反修例游行的机组人员，须暂停执行飞往内地航班和有关一切职务。国泰指，一名被控暴动罪的机组人员已被暂停飞行职务，另有两位机场员工因“行为不当”被解雇，包括时任国泰港龙空勤人员协会主席施安娜。</p><p><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/260538a6396d48af9e4c3466c2624d8b.png?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p>一周后，英籍行政总裁何杲辞职，称是“对公司近月所面对的事件负责”。他在内部邮件曾提到，国泰饱受压力，尤其来自“再重要不过的中国大陆市场”；顾客及商务总裁卢家培亦在同日辞职。原本是国泰机师的前公民党议员谭文豪随后宣布辞职，他表示决定是为了保护公司免受政治压力。</p><p>2020年疫情爆发，航空业重挫。6月，国泰航空启动390亿港元资本重组计划，香港政府注资合共273亿港元，惟4个月后，国泰宣布全球削减8500个岗位，并裁减5300名以香港作基地的员工，导致其子公司、有35年历史的“港龙航空”即时结业。</p><p>当检疫措施放宽时，国泰却面对人手不足的困境，待遇亦难以吸引人才。香港航空机组人员协会 ﹙HKAOA﹚在2022年10月发稿，称国泰正面临“史无前例的人手及培训短缺”，机师由2020年10月大裁员之前的4千人，跌至约2500人，加上薪金被扣减，人员正持续流失。</p><p>2023年初，国泰空中服务员工会不满资方编更安排、要求改善薪酬等等，原订在国泰城外发起集会，惟因国泰拒绝借出场地，无法取得警方不反对通知书。工会指为免会员参与未经批准集会，别无选择下取消行动。</p><p><a class="image" href="https://theinitium.com/article/20230525-hongkong-whatsnew-cx-fires-staff-over-alleged-discrimination/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/6ed1d07ce1a34efca72fdcd4d2350f48.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年5月19日，国泰航空的一架波音 747 从香港国际机场起飞。摄：Marc Fernandes/NurPhoto via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2021年5月19日，国泰航空的一架波音 747 从香港国际机场起飞。摄：Marc Fernandes/NurPhoto via Getty Images<span class="credit"></span></figcaption><p></p>
