--- a/_posts/2023-05-24-PQ-2023-quad峰會-支持所有國家免受脅迫-決定自己的未來.html
+++ b/_posts/2023-05-24-PQ-2023-quad峰會-支持所有國家免受脅迫-決定自己的未來.html
@@ -8,7 +8,19 @@ tags: blog
 author: 張東和
 ---
 
-<p>今（2023）年美日印澳「四方安全對話」峰會於本（5）月 20 日召開，會後的共同聲明中，表達了對於「包容、有韌性，自由、開放的印太區域」的堅定承諾。且開宗明義就提到支持印太地區各個國家「免受脅迫、決定自己的未來」（聲明第 2 點），至於免受哪個國家的脅迫？儘管聲明中隻字未提，卻也不辯自明。<br><br>由於美國拜登總統急需回到美國商議美債問題，故原定今年在澳洲舉辦的 2023 美日印澳「四方安全對話」（Quadrilateral Security Dialogue，Quad）峰會，改在 G7 峰會期間於日本舉辦。而美國國務卿布林肯則代表拜登於 5 月 22 日前往原定造訪的巴布亞紐幾內亞，簽署國防合作協議，已允許美軍進入巴紐機場與港口，美國並承諾提升巴紐防衛能力。</p>
+<p>今（2023）年美日印澳「四方安全對話」峰會於本（5）月 20 日召開，會後的共同聲明中，表達了對於「包容、有韌性，自由、開放的印太區域」的堅定承諾。且開宗明義就提到<strong>支持印太地區各個國家「免受脅迫、決定自己的未來」</strong>（聲明第 2 點），至於免受哪個國家的脅迫？儘管聲明中隻字未提，卻也不辯自明。<br><br>由於美國拜登總統急需回到美國商議美債問題，故原定今年在澳洲舉辦的 2023 美日印澳「四方安全對話」（Quadrilateral Security Dialogue，Quad）峰會，改在 G7 峰會期間於日本舉辦。</p>
+
+
+
+<p>回顧之所以有「四方安全對話」，乃是面對中國霸權崛起，在 2007 年由前日本首相安倍晉三發起，由美、日、印、澳四國共同組成跨越經濟、軍事、外交等安全合作的機制。2009～2017 因為中國因素，澳洲退出。但隨著中國霸權擴張，2016 年安倍和前美國總統川普有意重啟 Quad，而後澳洲也重新加入。Quad 雖名為安全對話，但是因為有具體的進程，也被視為具有準軍事同盟性質的印太北約。</p>
+
+
+
+<p>今（2023）年的 Quad 聲明讓我們看到，<strong>Quad 如何研判印太區域的安全危機，以及在既有的合作基礎上，強化印太夥伴間（包括東協、太平洋島國、環印度洋等國家）的安全合作</strong>。</p>
+
+
+
+<h3>積極佈局太平洋島國</h3>
 
 
 
@@ -18,15 +30,15 @@ author: 張東和
 
 
 
+<p>以太平洋島國為例，美國國務卿布林肯代表拜登於 5 月 22 日前往原定造訪的澳洲附近的人口約 900 萬人的太平洋島國巴布亞紐幾內亞，這是繼 5 月 15 日與太平洋島國密克羅尼西亞簽署「自由聯合協定」、5 月 18 日與帛琉簽署類似協議，再次積極佈局太平洋島國。</p>
+
+
+
 <figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c2f41351-pacific-islands-1024x640.jpg" alt="" class="wp-image-103135" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c2f41351-pacific-islands-1024x640.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c2f41351-pacific-islands-300x188.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c2f41351-pacific-islands-768x480.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c2f41351-pacific-islands-1536x961.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c2f41351-pacific-islands-2048x1281.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>太平洋島嶼國家　<br>圖／報呱製圖</figcaption></figure>
 
 
 
-<p>回顧之所以有「四方安全對話」，乃是面對中國霸權崛起，在 2007 年由前日本首相安倍晉三發起，由美、日、印、澳四國共同組成跨越經濟、軍事、外交等安全合作的機制。2009～2017 因為中國因素，澳洲退出。但隨著中國霸權擴張，2016 年安倍和前美國總統川普有意重啟 Quad，而後澳洲也重新加入。Quad 雖名為安全對話，但是因為有具體的進程，也被視為具有準軍事同盟性質的印太北約。</p>
-
-
-
-<p>今年的 Quad 聲明讓我們看到，Quad 如何研判印太區域的安全危機，以及在既有的合作基礎上，強化印太夥伴間（包括東協、太平洋島國、環印度洋等國家）的安全合作。</p>
+<p>美國將為巴紐帶來幾百億美元的投資，而<strong>中國長期以來是巴布亞紐幾內亞基礎建設的主要投資者</strong>，拔樁意味濃厚。<br><br>中國才在 2022 年與太平洋島國索羅門群島簽署安全協議，引發美澳紐三國的擔憂。這次，美國與巴紐共同簽署「國防合作協議」（The Defense Cooperation Agreement），<strong>允許美軍進入巴紐機場與港口，美國並承諾提升巴紐防衛能力</strong>，將使美國大幅增加在太平洋島國的存在感，也代表 Quad 進一步與中國影響力較勁，依原定計畫在太平洋島國擴大結盟 。</p>
 
 
 
@@ -38,11 +50,11 @@ author: 張東和
 
 
 
-<p>聲明中強烈反對藉由武力或脅迫改變印太地區的現狀而採取破壞穩定或片面的行動。儘管沒有點名，Quad 重申對於在印太地區的爭議地物（ disputed features）的軍事化、海岸警衛隊與海上民兵船的危險使用、破壞他國海上資源開採活動，表達嚴重關切（第 29 點）。這些都指向了中國近年來對其他國家的擴張與脅迫。</p>
+<p>聲明中<strong>強烈反對藉由武力或脅迫改變印太地區的現狀而採取破壞穩定或片面的行動</strong>。Quad 重申對於在<strong>印太地區的爭議地物（ disputed features）的軍事化、海岸警衛隊與海上民兵船的危險使用、破壞他國海上資源開採活動</strong>，表達嚴重關切（第 29 點）。儘管沒有點名，這些都指向了中國近年來對其他國家的擴張與脅迫。</p>
 
 
 
-<p>從今年 Quad 領袖峰會的共同聲明，可以看到 Quad 正以四國為基礎，往更為擴大的印太區域同盟前進。Quad 將各積極地在印太區域投入資金，擴大印太夥伴，不論大小（第 36 點）。回顧過去 Quad 的進程，發展了Quad Plus，台灣也曾在 2018 年受邀出席，Quad 的外掛國家還包括了菲律賓、印尼、新加坡、法國和斯里蘭卡。</p>
+<p>從今年 Quad 領袖峰會的共同聲明，可以看到 Quad 正以四國為基礎，往更為擴大的印太區域同盟前進。Quad 將各積極地在印太區域投入資金，擴大印太夥伴，不論大小（第 36 點）。回顧過去 Quad 的進程，發展了<strong>Quad Plus，台灣也曾在 2018 年受邀出席</strong>，Quad 的外掛國家還包括了<strong>菲律賓、印尼、新加坡、法國和斯里蘭卡</strong>。</p>
 
 
 
@@ -58,11 +70,11 @@ author: 張東和
 
 
 
-<p>印太地區不能自外於全球架構，因此，Quad 表明將印太區域納入在全球氣候變遷合作上的必要性，並從永續發展的目標上，基於「印太經濟架構」（IPEF）下，發展印太潔淨能源轉型以及印太潔淨能源供應鏈，強化區域能源安全，並承諾增加印太區域氣候韌性所做的基礎建設投資。</p>
+<p>印太地區不能自外於全球架構，因此，Quad 表明將印太區域納入在全球氣候變遷合作上的必要性，並從永續發展的目標上，基於<strong>「印太經濟架構」（IPEF）</strong>下，發展印太潔淨能源轉型以及印太潔淨能源供應鏈，強化區域能源安全，並承諾增加印太區域氣候韌性所做的基礎建設投資。</p>
 
 
 
-<p>聲明中強調，這樣的投資，不會強加印太地區夥伴難以支撐的債務負擔（暗指中國一帶一路計畫對投資國所造成的債務陷阱），未來將會在 G20 的框架下，促進債務可負擔性與透明度（第 16 點）。</p>
+<p>聲明中強調，這樣的投資，<strong>不會強加印太地區夥伴難以支撐的債務負擔（暗指中國一帶一路計畫對投資國所造成的債務陷阱）</strong>，未來將會在 G20 的框架下，促進債務可負擔性與透明度（第 16 點）。</p>
 
 
 
@@ -82,7 +94,7 @@ author: 張東和
 
 
 
-<p>Quad 重申和平解決爭端與尊重《聯合國憲章》的原則，鑒於俄烏戰爭對於全球經濟的影響，包括糧食、燃料、能源安全與關鍵產業鏈等，以及戰爭所造成悲慘的人道危機，Quad 將持續提供烏克蘭人道援助。聲明中提到，也因為意識到我們這個時代不能是戰爭的時代，仍須致力對話與外交（第 31 點）。</p>
+<p>Quad 重申和平解決爭端與尊重《聯合國憲章》的原則，<strong>鑒於俄烏戰爭對於全球經濟的影響，包括糧食、燃料、能源安全與關鍵產業鏈等，以及戰爭所造成悲慘的人道危機</strong>，Quad 將持續提供烏克蘭人道援助。聲明中提到，也因為意識到我們這個時代不能是戰爭的時代，仍須<strong>致力對話與外交</strong>（第 31 點）。</p>
 
 
 
