--- a/_posts/2023-05-24-PQ-訓練烏克蘭飛行員駕駛f-16-俄前總統-核災危機升高.html
+++ b/_posts/2023-05-24-PQ-訓練烏克蘭飛行員駕駛f-16-俄前總統-核災危機升高.html
@@ -20,7 +20,7 @@ author: 王雪俐
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-1024x576.jpg" alt="" class="wp-image-137590" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745.jpg 1440w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國很可能會在德州拉克蘭空軍基地（Joint Base San Antonio-Lackland）的第149戰鬥機聯隊（149th Fighter Wing）訓練烏克蘭飛行員駕駛F-16戰鬥機<br>圖／U.S. Air National Guard</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-1024x576.jpg" alt="" class="wp-image-137590" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6007bca4-6853745.jpg 1440w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國很可能會在德州拉克蘭空軍基地（Joint Base San Antonio-Lackland）的第149戰鬥機聯隊（149th Fighter Wing）訓練烏克蘭飛行員駕駛F-16戰鬥機<br>圖／U.S. Air National Guard</figcaption></figure></div>
 
 
 
