--- a/_posts/2023-05-25-PQ-世紀大劫難-台灣史上少見的經濟迫害-上.html
+++ b/_posts/2023-05-25-PQ-世紀大劫難-台灣史上少見的經濟迫害-上.html
@@ -24,7 +24,7 @@ author: 邱 國禎
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/47ba1f1a-202eaa08-78d3-4d11-9b05-3c61692fd60f.jpeg" alt="" class="wp-image-137654" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/47ba1f1a-202eaa08-78d3-4d11-9b05-3c61692fd60f.jpeg 744w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/47ba1f1a-202eaa08-78d3-4d11-9b05-3c61692fd60f-300x189.jpeg 300w" sizes="(max-width: 744px) 100vw, 744px" /><figcaption>中國國民黨對台灣進行劫收後，造成到處都是餓孚，自殺事件頻傳。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/47ba1f1a-202eaa08-78d3-4d11-9b05-3c61692fd60f.jpeg" alt="" class="wp-image-137654" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/47ba1f1a-202eaa08-78d3-4d11-9b05-3c61692fd60f.jpeg 744w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/47ba1f1a-202eaa08-78d3-4d11-9b05-3c61692fd60f-300x189.jpeg 300w" sizes="(max-width: 744px) 100vw, 744px" /><figcaption>中國國民黨對台灣進行劫收後，造成到處都是餓孚，自殺事件頻傳。</figcaption></figure></div>
 
 
 
