--- a/_posts/2023-05-26-PQ-2024大選開跑-各政黨的國防政策必考題.html
+++ b/_posts/2023-05-26-PQ-2024大選開跑-各政黨的國防政策必考題.html
@@ -28,7 +28,7 @@ author: 劉以正
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-1024x683.jpg" alt="" class="wp-image-137732" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>賴清德在擔任台南市長時期，與陸軍39化學兵互動<br>圖／賴清德臉書@chingte</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-1024x683.jpg" alt="" class="wp-image-137732" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/07e993b9-12314296_1201965789820438_5517086572973649482_o.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>賴清德在擔任台南市長時期，與陸軍39化學兵互動<br>圖／賴清德臉書@chingte</figcaption></figure></div>
 
 
 
@@ -52,7 +52,7 @@ author: 劉以正
 
 
 
-<h3>民眾黨國防改革止於媒體聲量用</h3>
+<h2>民眾黨國防改革止於媒體聲量用</h2>
 
 
 
@@ -72,7 +72,7 @@ author: 劉以正
 
 
 
-<h3>台灣基進將國防議題為核心政策　時代力量在乎民生與防弊議題</h3>
+<h2>台灣基進：國防為核心政策　時代力量：更在乎民生與防弊</h2>
 
 
 
