--- a/_posts/2023-05-27-PQ-烏克蘭的內部戰役-對抗內賊及親俄勢力.html
+++ b/_posts/2023-05-27-PQ-烏克蘭的內部戰役-對抗內賊及親俄勢力.html
@@ -12,7 +12,7 @@ author: 陸 瑪丁
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-1024x683.jpeg" alt="" class="wp-image-137875" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-1024x683.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）.jpeg 1080w" sizes="(max-width: 561px) 100vw, 561px" /><figcaption>俄軍近期反攻烏克蘭東部及南部。（圖／twitter@ZelenskyyUa）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-1024x683.jpeg" alt="" class="wp-image-137875" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-1024x683.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/af5273b6-（圖／twitter@zelenskyyua）.jpeg 1080w" sizes="(max-width: 561px) 100vw, 561px" /><figcaption>俄軍近期反攻烏克蘭東部及南部。（圖／twitter@ZelenskyyUa）</figcaption></figure></div>
 
 
 
