--- a/_posts/2023-05-29-INMEDIA-梁美芬-展示-結束共產黨領導-標語或屬煽動-港區國安法-已起震懾作用.html
+++ b/_posts/2023-05-29-INMEDIA-梁美芬-展示-結束共產黨領導-標語或屬煽動-港區國安法-已起震懾作用.html
@@ -19,4 +19,5 @@ author: 獨媒報導
 <p>梁美芬表示，本港自2014年起有不少具煽動內容，「周圍都係」，稱對此感到傷感：「煽動一啲人仇恨自己嘅國家，啲人以為冇乜嘢，言論自由！咁就講乜都得，做乜都得！」她表示，必須向市民解釋，不是涉及暴力才屬煽動仇恨，只要涉及政府及群眾間，即屬煽動罪。</p>
 <p>對於煽動罪屬古舊法例，律政司近年卻多次用此提控，梁美芬認為基於不同考慮，如執法部門沒有嚴格執法，斥部分機構在港沒有登記，卻一直進行政治活動，兼且涉及危害國安，「點解會維持十幾年都無登記，無追呢？呢啲就以前嘅疏漏啦。」</p>
 <p>她補充說，既然已發生兩次危害香港穩定太平的事，便要嚴格執行處理煽動行為，不再只局限於《港區國安法》的條文。梁美芬強調，香港絕對保障言論自由，但就不是絕對，指《基本法》條文中沒有列明限制，而《香港人權法案條例》則已清楚列明。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/m4992691Ry" title="350526844_3440367769553373_2008890523368387749_n"><img src="https://live.staticflickr.com/65535/52934596098_30b0bf33ac_b.jpg" alt="350526844_3440367769553373_2008890523368387749_n" /></a><br /><em>港台圖片</em></p>
 </div></div></div>
